# mercadoPagoDjango

./: README.md  pyproject.toml
config/: settings.py  urls.py
mercadoPago/: models.py  views.py
mercadoPago/migrations/: 0001_initial.py
